add ipykernel dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pynput = "^1.7.6"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
+ipykernel = "^6.23.1"
 
 [build-system]
 requires = ["poetry-core"]
